# moragi

./: README.md  pyproject.toml  tasks.py
.github/workflows/: daily_job.yml  daily_job_lunch.yml  date_time_test.yml  pull_request.yml  send_message.yml  work_moragi.yml  work_moragi_dinner.yml  work_moragi_lunch.yml  work_moragi_next_menu.yml
docs/: CONTRIBUTING.md
images/: 모락이.drawio
moragi/: __init__.py  __main__.py
moragi/cli/: cj_fresh_meal_utils.py  commands.py  meal_utils.py
moragi/configs/: logger.py
moragi/models/: __init__.py  cj_fresh_meal_response_model.py  menu.py
moragi/models/cj_fresh_meal/: __init__.py  response_model.py  week_type.py
moragi/models/cj_fresh_meal/test/: test_cj_fresh_meal_response_model.py
moragi/models/test/: test_cj_fresh_meal_response_model.py  test_menu.py
moragi/tests/: test_cj_fresh_meal.py
moragi/utils/: __init__.py  cj_fresh_meal.py  slack.py
moragi/utils/slack/: __init__.py  blocks.py  slack_message_builder.py  slack_message_sender.py
moragi/utils/test/: test_cj_fresh_meal.py
