[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "moragi"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"

[tool.pyright]
typeCheckingMode = "strict"
pythonPlatform = "All"
venvPath = "./.venv"
stubPath = "./.type_stubs"
include = ["./*"]
exclude = ["**/node_modules", "**/__pycache__"]
useLibraryCodeForTypes = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
pythonVersion = "3.9"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 2
split_before_logical_operator = true
column_limit = 119
allow_split_before_dict_value = false

[tool.ruff]
line-length = 119
select = ["PLE", "PLR", "PLW", "E", "W", "F", "I", "Q", "B"]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.4.0"
pydantic = "^1.10.5"
httpx = "^0.23.3"
slack-sdk = "^3.20.1"
pytz = "^2022.7.1"
typer = { extras = ["all"], version = "^0.7.0" }
rich = "12.6.0"
tenacity = "^8.2.2"

[tool.poetry.scripts]
moragi = "moragi:main"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
docstring-quotes = "single"
multiline-quotes = "single"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
yapf = "^0.32.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
invoke = "^1.7.3"
ruff = "^0.0.199"
types-invoke = "^1.7.3.16"
types-toml = "^0.10.8.5"
pyright = "^1.1.296"
